attachment/cert-manager/ingress-private.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/limit-rps: "100"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: ingress-private
  name: ingress-private
  namespace: default
spec:
  ingressClassName: external
  rules:
  - host: "*.abc.org"
    http:
      paths:
      - backend:
          service:
            name: echoserver
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: www.example.com
    http:
      paths:
      - backend:
          service:
            name: echoserver
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: echoserver.example.com
    http:
      paths:
      - backend:
          service:
            name: echoserver
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "abc.org"
    - "www.abc.org"
    - "*.abc.org"
    secretName: tls-abc.org
  - hosts:
    - "www.example.com"
    - "echoserver.example.com"
    - "*.example.com"
    secretName: tls-example.com
